# chase-perks-agents-optimizer

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  README.md  RESEARCH_FINDINGS.md  SPEC.md  pyproject.toml  pyrightconfig.json
chase_agent/: cli.py  config.py  db.py  seed.py
chase_agent/dashboard/: app.py  state.py
chase_agent/dashboard/templates/: base.html  dashboard.html
chase_agent/rules/: clocks.py  engine.py  perks.py
chase_agent/scraper/: chase.py  chrome.py  llm.py  redact.py
tests/: conftest.py  test_clocks.py  test_clocks_edges.py  test_db.py  test_db_cents.py  test_engine.py  test_engine_fixes.py  test_redact.py
